# labs

lab1/: CMakeLists.txt  main.cpp
lab1/abc/: CMakeLists.txt  mymath2.cpp  mymath2.h
lab2/: CMakeLists.txt  main.cpp
lab2/person/: CMakeLists.txt  person.cpp  person.h
lab2/planet/: CMakeLists.txt  planet.cpp  planet.h
lab3/: CMakeLists.txt  main.cpp
lab3/fraction/: CMakeLists.txt  fraction.cpp  fraction.h
lab4/: CMakeLists.txt  main.cpp
lab4/Stack/: CMakeLists.txt  Stack.h
lab5/: CMakeLists.txt  main.cpp
lab5/containers/: CMakeLists.txt  myset.h  myvec.cpp  myvec.h
lab6/: CMakeLists.txt  main.cpp
lab6/poly/: CMakeLists.txt  poly.cpp  poly.h
lab7/: CMakeLists.txt  main.cpp
lab7/MyVector/: CMakeLists.txt  myvector.h
lab7/Virtual_Classes/: CMakeLists.txt  virtual_classes.cpp  virtual_classes.h
lab8/: CMakeLists.txt  main.cpp
